{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 159,
  "lineage": "771032bc-bd05-970e-746f-e60e5a271839",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kaseo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:internet-gateway/igw-01af000ccb3cca3a5",
            "id": "igw-01af000ccb3cca3a5",
            "owner_id": "770775386994",
            "tags": {
              "Name": "kaseo-rtb"
            },
            "tags_all": {
              "Name": "kaseo-rtb"
            },
            "vpc_id": "vpc-0aa0bafe391fd2e01"
          },
          "dependencies": [
            "aws_vpc.kaseo-restaurant-ltd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kaseo-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:route-table/rtb-0341e103d4cb16bff",
            "id": "rtb-0341e103d4cb16bff",
            "owner_id": "770775386994",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01af000ccb3cca3a5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kaseo-igw"
            },
            "tags_all": {
              "Name": "kaseo-igw"
            },
            "vpc_id": "vpc-0aa0bafe391fd2e01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kaseo-igw",
            "aws_vpc.kaseo-restaurant-ltd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-rtb-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ba1e44f37796430",
            "route_table_id": "rtb-0341e103d4cb16bff",
            "subnet_id": "subnet-066a1d3ba010d66be"
          },
          "dependencies": [
            "aws_vpc.kaseo-restaurant-ltd",
            "aws_internet_gateway.kaseo-igw",
            "aws_route_table.kaseo-route-table",
            "aws_subnet.kaseo-public-sub-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-rtb-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0075c71287eddf72d",
            "route_table_id": "rtb-0341e103d4cb16bff",
            "subnet_id": "subnet-0fd15976c2f016b7e"
          },
          "dependencies": [
            "aws_internet_gateway.kaseo-igw",
            "aws_route_table.kaseo-route-table",
            "aws_subnet.kaseo-public-sub-2",
            "aws_vpc.kaseo-restaurant-ltd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kaseo-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:security-group/sg-0dc8d12f43eb37fc0",
            "description": "Allow TLS traffic to webservers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc8d12f43eb37fc0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "770775386994",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB SG"
            },
            "tags_all": {
              "Name": "ALB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa0bafe391fd2e01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kaseo-restaurant-ltd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kaseo-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:security-group/sg-0cedddd2a457c94fc",
            "description": "Allow TLS traffic from web-server",
            "egress": [],
            "id": "sg-0cedddd2a457c94fc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "770775386994",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB SG"
            },
            "tags_all": {
              "Name": "DB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa0bafe391fd2e01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kaseo-restaurant-ltd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kaseo-web-server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:security-group/sg-0f39d5a1a2d83b2cf",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f39d5a1a2d83b2cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "192.168.1.98/32"
                ],
                "description": "RDP",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "192.168.1.98/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-server-sg",
            "name_prefix": "",
            "owner_id": "770775386994",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Webserver SG"
            },
            "tags_all": {
              "Name": "Webserver SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa0bafe391fd2e01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kaseo-restaurant-ltd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kaseo-private-db-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:subnet/subnet-0f80b56f22f99864d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f80b56f22f99864d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "770775386994",
            "tags": {
              "DB": "DynamoDB",
              "Name": "DB Subnet AZ A"
            },
            "tags_all": {
              "DB": "DynamoDB",
              "Name": "DB Subnet AZ A"
            },
            "vpc_id": "vpc-0aa0bafe391fd2e01"
          },
          "dependencies": [
            "aws_vpc.kaseo-restaurant-ltd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kaseo-private-db-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:subnet/subnet-0f4413354d1be32fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0f4413354d1be32fa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "770775386994",
            "tags": {
              "DB": "DynamoDB",
              "Name": "DB Subnet AZ B"
            },
            "tags_all": {
              "DB": "DynamoDB",
              "Name": "DB Subnet AZ B"
            },
            "vpc_id": "vpc-0aa0bafe391fd2e01"
          },
          "dependencies": [
            "aws_vpc.kaseo-restaurant-ltd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kaseo-private-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:subnet/subnet-08d84bb98c23cd2e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-08d84bb98c23cd2e7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "770775386994",
            "tags": {
              "Name": "App Subnet AZ A",
              "Servers": "Apache and Nginx"
            },
            "tags_all": {
              "Name": "App Subnet AZ A",
              "Servers": "Apache and Nginx"
            },
            "vpc_id": "vpc-0aa0bafe391fd2e01"
          },
          "dependencies": [
            "aws_vpc.kaseo-restaurant-ltd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kaseo-private-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:subnet/subnet-0b18930dd0a0b1693",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-0b18930dd0a0b1693",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "770775386994",
            "tags": {
              "Name": "App Subnet AZ B",
              "Servers": "Apache and Nginx"
            },
            "tags_all": {
              "Name": "App Subnet AZ B",
              "Servers": "Apache and Nginx"
            },
            "vpc_id": "vpc-0aa0bafe391fd2e01"
          },
          "dependencies": [
            "aws_vpc.kaseo-restaurant-ltd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kaseo-public-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:subnet/subnet-066a1d3ba010d66be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-066a1d3ba010d66be",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "770775386994",
            "tags": {
              "Name": "ALB Subnet AZ A"
            },
            "tags_all": {
              "Name": "ALB Subnet AZ A"
            },
            "vpc_id": "vpc-0aa0bafe391fd2e01"
          },
          "dependencies": [
            "aws_vpc.kaseo-restaurant-ltd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kaseo-public-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:subnet/subnet-0fd15976c2f016b7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0fd15976c2f016b7e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "770775386994",
            "tags": {
              "Name": "ALB Subnet AZ B"
            },
            "tags_all": {
              "Name": "ALB Subnet AZ B"
            },
            "vpc_id": "vpc-0aa0bafe391fd2e01"
          },
          "dependencies": [
            "aws_vpc.kaseo-restaurant-ltd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kaseo-restaurant-ltd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:770775386994:vpc/vpc-0aa0bafe391fd2e01",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00d4b0bf72be04a66",
            "default_route_table_id": "rtb-02598c879c02fcac8",
            "default_security_group_id": "sg-0d841836ff2497467",
            "dhcp_options_id": "dopt-e4502882",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0aa0bafe391fd2e01",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02598c879c02fcac8",
            "owner_id": "770775386994",
            "tags": {
              "Name": "kaseo manchester area"
            },
            "tags_all": {
              "Name": "kaseo manchester area"
            }
          }
        }
      ]
    }
  ]
}